More cleanup and generics